--- a/razor-inline.csproj
+++ b/razor-inline.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.1-preview</Version>
+    <Version>0.1.2-preview</Version>
     <LangVersion>latest</LangVersion>
     <PackageId>Wivuu.RazorInline</PackageId>
     <Authors>Erik O'Leary</Authors>
@@ -15,11 +15,11 @@
     - Initial release
     </ReleaseNotes>
     <PackageTags>c#;aspnet;razor;email</PackageTags>
-
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.0-preview1-final" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
