--- a/razor-inline.csproj
+++ b/razor-inline.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.3-preview</Version>
+    <Version>0.1.6-preview</Version>
     <LangVersion>latest</LangVersion>
     <PackageId>Wivuu.RazorInline</PackageId>
     <Authors>Erik O'Leary</Authors>
@@ -19,6 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.0.1" />
   </ItemGroup>
