--- a/razor-inline/razor-inline.csproj
+++ b/razor-inline/razor-inline.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.7-preview</Version>
+    <Version>0.1.7</Version>
     <LangVersion>latest</LangVersion>
     <PackageId>Wivuu.RazorInline</PackageId>
     <Authors>Erik O'Leary</Authors>
@@ -12,7 +12,7 @@
     <AssemblyName>Wivuu.RazorInline</AssemblyName>
     <RootNamespace>Wivuu.RazorInline</RootNamespace>
     <ReleaseNotes>
-    - Initial release
+    - Upgraded nuget packages with release of .NET Core 2.1
     </ReleaseNotes>
     <PackageTags>c#;aspnet;razor;email</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
