--- a/razor-inline/razor-inline.csproj
+++ b/razor-inline/razor-inline.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.1.7</Version>
+    <Version>0.1.8</Version>
     <LangVersion>latest</LangVersion>
     <PackageId>Wivuu.RazorInline</PackageId>
     <Authors>Erik O'Leary</Authors>
@@ -12,7 +12,7 @@
     <AssemblyName>Wivuu.RazorInline</AssemblyName>
     <RootNamespace>Wivuu.RazorInline</RootNamespace>
     <ReleaseNotes>
-    - Upgraded nuget packages with release of .NET Core 2.1
+    - Added new overload for `AddRazorInline` to set Application Name
     </ReleaseNotes>
     <PackageTags>c#;aspnet;razor;email</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
